[package]
name = "doc_link"
version = "0.1.0"
edition = "2018"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
description = "doc links"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version =  "0.15.43", features = ["full"] }
proc-macro2 = "0.4.27"
quote = "0.6.11"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_yaml = "0.8.9"
Inflector = "0.11.4"
clap = "2.33.0"
