[package]
name = "wf2"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wf2_core = { path = "../wf2_core", version = "0.1.0" }
tokio = "0.1.20"
futures = "0.1.27"
clap = { version = "2.33.0", features = ["yaml"] }
terminal_size = "0.1.8"
