[package]
name = "wf2"
version = "0.27.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"
description = "PHP docker environments"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wf2_core = { path = "../wf2_core", version = "0.27.0" }
tokio = "0.1.20"
futures = "0.1.27"
clap = { version = "2.33.0", features = ["yaml"] }
terminal_size = "0.1.8"
from_file = "0.1.3"
from_file_derive = "0.1.3"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_yaml = "0.8.9"
ansi_term = "0.11.0"
users = "0.9.1"

