[package]
name = "wf2_core"
version = "0.6.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"
description = "The engine for WF2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
users = "0.9.1"
snailquote = "0.2.0"
futures = "0.1.27"
tokio = "0.1.20"
ansi_term = "0.11.0"
regex = "1"
from_file = "0.1.3"
from_file_derive = "0.1.3"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_yaml = "0.8.9"
