[package]
name = "wf2_core"
version = "0.29.2"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"
description = "The engine for WF2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
users = "0.9.1"
snailquote = "0.2.0"
futures = "0.1.27"
tokio = "0.1.20"
ansi_term = "0.11.0"
regex = "1"
from_file = "0.1.3"
from_file_derive = "0.1.3"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_yaml = "0.8.9"
env_proc = { path = "../env_proc", version = "0.1.0" }
doc_link = { path = "../doc_link", version = "0.1.0" }
serde_json = "1.0"
reqwest = "0.9"
tempfile = "3.1"
filepath = "0.1"
nix = "0.15"
chrono = "0.4.9"
prettytable-rs = "^0.8"
base64 = "0.11.0"
libmath = "0.2.1"
dirs = "2.0.2"
failure = "0.1.6"
hyper = "0.12.35"
tempdir = "0.3.7"
zip = "0.5.3"
structopt = "0.3.8"
terminal_size = "0.1.8"
